fixed spacing

--- a/frontend/containers/LoginContainerStyles.module.scss
+++ b/frontend/containers/LoginContainerStyles.module.scss
@@ -27,15 +27,17 @@
   border: none;
 }
 
-.username .password {
+.username {
   padding: 0;
   height: 13px;
   font-size: 16px;
+  padding-bottom: -3px;
 }
 
 .password {
   padding: 0;
-  padding-top: 7px;
+  padding-top: 8px;
+  padding-bottom: -3px;
   height: 13px;
   font-size: 16px;
 }
